k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: greport
  labels:
    app.kubernetes.io/name: greport
    app.kubernetes.io/part-of: greport
